# starting-ragchatbot-codebase

./: .env.example  .gitignore  CLAUDE.cn.md  CLAUDE.md  NOTE.md  OVERVIEW.md  README.md  backend-tool-refactor.md  pyproject.toml  test_api_key.py
.claude/commands/: implement-feature.md
backend/: ai_generator.py  app.py  config.py  document_processor.py  models.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: FIXES_PROPOSAL.md  IMPLEMENTATION_SUMMARY.md  README.md  TESTING_GUIDE.md  TEST_RESULTS.md  __init__.py  conftest.py  test_ai_generator.py  test_rag_system.py  test_results.txt  test_run_full_output.txt  test_search_tools.py
frontend/: index.html  script.js  style.css
scripts/: check.sh  format.sh  lint.sh
